// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input does not equals string 1`] = `
<div>
  <input />
  <div>
    This does not equal Hi. Please check your value and try again.
  </div>
</div>
`;

exports[`It sould be valid if input equals string 1`] = `
<div>
  <input />
  <div />
</div>
`;

exports[`It sould be valid if input is empty 1`] = `
<div>
  <input />
  <div />
</div>
`;
